--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#323949</color>
+    <color name="colorPrimaryVariant">#212129</color>
+    <color name="colorSecondary">#40445A</color>
+    <color name="colorSecondaryVariant">#40445A</color>
+    <color name="black">#111111</color>
+    <color name="white">#FFFFFF</color>
+    <color name="nightRider">#333333</color>
+    <color name="whiteSmoke">#F5F5F5</color>
+    <color name="dimGray">#707070</color>
 </resources>
