--- a/app/src/main/res/drawable/bg_shimmer.xml
+++ b/app/src/main/res/drawable/bg_shimmer.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#E5E5E5" />
 
-    <corners android:radius="@dimen/marginSmall" />
+    <corners android:radius="@dimen/margin_small" />
 </shape>
