--- a/app/src/main/res/layout/item_row_hadith_books.xml
+++ b/app/src/main/res/layout/item_row_hadith_books.xml
@@ -6,37 +6,59 @@
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/marginNormal"
-        android:layout_marginTop="@dimen/marginNormal"
-        app:cardCornerRadius="@dimen/marginSmall">
+        android:layout_marginHorizontal="@dimen/margin_normal"
+        android:layout_marginBottom="@dimen/margin_normal"
+        app:cardCornerRadius="@dimen/margin_small">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/marginNormal">
+            android:padding="@dimen/margin_normal">
+
+            <ImageView
+                android:id="@+id/iv_books"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_library_books_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_normal"
                 android:text="@{item.name}"
+                android:layout_marginTop="@dimen/margin_very_small"
+                android:letterSpacing="0.15"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/iv_books"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="HR Bukhari" />
 
             <TextView
+                android:id="@+id/tv_available"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_normal"
                 android:text="@{item.available + ` Hadith`}"
                 android:textColor="@color/colorSecondaryVariant"
+                app:layout_constraintStart_toEndOf="@id/iv_books"
+                app:layout_constraintTop_toBottomOf="@id/tv_name"
+                tools:text="3000 Hadith" />
+
+            <ImageView
+                android:id="@+id/iv_chevron"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_chevron_right_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="3000 Hadith" />
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
