--- a/app/src/main/res/layout/activity_hadith_collection.xml
+++ b/app/src/main/res/layout/activity_hadith_collection.xml
@@ -33,7 +33,34 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_hadith_collection"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin_normal"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_back" />
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_hadith_collection"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_normal"
+            app:layout_constraintTop_toBottomOf="@id/iv_back">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <include layout="@layout/item_row_shimmer_hadith_collection" />
+
+                <include layout="@layout/item_row_shimmer_hadith_collection" />
+
+                <include layout="@layout/item_row_shimmer_hadith_collection" />
+
+                <include layout="@layout/item_row_shimmer_hadith_collection" />
+            </LinearLayout>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
