--- a/app/src/main/res/layout/item_row_shimmer_hadith_books.xml
+++ b/app/src/main/res/layout/item_row_shimmer_hadith_books.xml
@@ -3,14 +3,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/margin_normal"
     android:layout_marginBottom="@dimen/margin_normal"
     app:cardCornerRadius="@dimen/margin_small">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="@dimen/margin_normal">
 
         <ImageView
@@ -22,29 +22,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <View
             android:id="@+id/tv_name"
             android:layout_width="150dp"
-            android:layout_height="22dp"
+            android:layout_height="14dp"
             android:layout_marginStart="@dimen/margin_normal"
-            android:background="@drawable/bg_shimmer"
-            android:letterSpacing="0.15"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            android:layout_marginTop="@dimen/margin_small"
             app:layout_constraintStart_toEndOf="@id/iv_books"
+            android:background="@drawable/bg_shimmer"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <View
             android:id="@+id/tv_available"
-            android:layout_width="120dp"
-            android:layout_height="20dp"
+            android:layout_width="100dp"
+            android:layout_height="12dp"
             android:layout_marginStart="@dimen/margin_normal"
-            android:layout_marginTop="@dimen/margin_very_small"
             android:background="@drawable/bg_shimmer"
-            android:textColor="@color/colorSecondaryVariant"
+            android:layout_marginTop="@dimen/margin_very_small"
             app:layout_constraintStart_toEndOf="@id/iv_books"
             app:layout_constraintTop_toBottomOf="@id/tv_name" />
+
 
         <ImageView
             android:id="@+id/iv_chevron"
